@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - more robust check for static libarchive
 
 0.08      2014-02-02 04:35:04 -0500
   - only link static (libarchive.a)
